name:                pager
version:             0.1.0.0
synopsis:            Open up a pager, like 'less' or 'more'
description:         
  This opens up the user's $PAGER. On Linux, this is usually called @less@. On
  the various BSDs, this is usually @more@.
homepage:            https://github.com/pharpend/pager
license:             BSD2
license-file:        LICENSE
author:              Peter Harpending
maintainer:          peter@harpending.org
bug-reports:         https://github.com/pharpend/pager
copyright:           Copyright (c) 2015, Peter Harpending.
category:            Data, System, Text
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  
  README
  LICENSE

source-repository head
  type:                git
  location:            https://github.com/pharpend/pager.git

source-repository this
  type:                git
  location:            https://github.com/pharpend/pager.git
  tag:                 0.1.0.0

library
  -- exposed-modules:     
  -- other-modules:       
  -- other-extensions:    
  -- hs-source-dirs:      
  default-language:    Haskell2010
  build-depends:
      base >=4.6
    , unix
  
